Fix: Remove some components

--- a/sonar-cloud/sonar-project.properties
+++ b/sonar-cloud/sonar-project.properties
@@ -1,32 +1,24 @@
-# SonarCloud Project Identification
 sonar.projectKey=AkhilaNenavath123_SonarCloudAnalyzer
 sonar.organization=akhilanenavath123
 
-# Project Info for SonarCloud UI
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=SonarCloudAnalyzer
+#sonar.projectVersion=1.0
+
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
+# standard sonarconfig (do not change unless required)
+sonar.host.url = https://sonarcloud.io
 sonar.projectVersion=1.0
-sonar.projectName=SonarCloudAnalyzer
-
-# SonarCloud Server Configuration
-sonar.host.url=https://sonarcloud.io
-
-# Code Encoding
 sonar.sourceEncoding=UTF-8
-
-# Project Source Code
 sonar.sources=./src
-sonar.exclusions=**/src/reportWebVitals.ts,**/src/index.tsx,**/node_modules/**,**/*.stories.tsx,**/coverage/**
-
-# Test Files and Coverage Reports
+sonar.exclusions=**/src/reportWebVitals.ts,**/src/index.tsx,**/node_modules/**,**/*.spec.ts,**/*.stories.tsx,**/src/services/**,**/coverage/**
 sonar.tests=./src
-sonar.test.inclusions=src/**/*.test.tsx,src/**/*.test.ts
-sonar.test.exclusions=**/node_modules/**,**/*.stories.tsx,**/coverage/**
-
-# Exclude Services Directory only if necessary
-# Remove this if you want to track test coverage of services
-# sonar.exclusions=**/src/services/**
-
-# LCOV report for test coverage
-sonar.javascript.lcov.reportPaths=./coverage/lcov.info
-
-# Additional language settings
+sonar.test.inclusions=src/**/*.test.tsx,**/*.test.ts
+sonar.test.exclusions=**/node_modules/**,**/*.spec.ts,**/*.stories.tsx,**/src/services/**,**/coverage/**
 sonar.language=ts
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
