--- a/sonar-cloud/package.json
+++ b/sonar-cloud/package.json
@@ -64,5 +64,12 @@
     "prop-types": "^15.8.1",
     "storybook": "^8.3.2",
     "webpack": "^5.94.0"
+  },
+  "jest": {
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "<rootDir>/src/reportWebVitals.ts",
+      "<rootDir>/src/index.tsx"
+    ]
   }
 }
